--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
